--- a/Intermediate_Javascript/Algorithms/dsa-sorting-exercise-starter-code/dsa-sorting/package.json
+++ b/Intermediate_Javascript/Algorithms/dsa-sorting-exercise-starter-code/dsa-sorting/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "jest": "^24.1.0"
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
